--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@supabase/supabase-js": "^2.77.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodeman": "^1.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
